# record

./: .gitignore  BUILD.bazel  WORKSPACE
algorithm/quicksort/: BUILD.bazel  QuickSort.hs
aoc/: .bazelrc  BUILD.bazel  WORKSPACE
aoc/2020/01/: BUILD.bazel  Main.hs
aoc/2020/01/src/: Main.hs
aoc/2020/02/: BUILD.bazel  Main.hs
aoc/2020/02/src/: Main.hs
aoc/2020/03/: BUILD.bazel  Main.hs
aoc/2020/03/src/: Main.hs
aoc/2020/04/: BUILD.bazel  Main.hs
aoc/2020/04/src/: Main.hs
aoc/2020/05/: BUILD.bazel  Main.hs
aoc/2020/05/src/: Main.hs
aoc/2020/06/: BUILD.bazel  Main.hs
aoc/2020/06/src/: Main.hs
aoc/utils/: BUILD.bazel  EmbedIO.hs
ds/bst/: BUILD.bazel  BinarySearchTree.hs
ds/singlylinkedlist/: BUILD.bazel  SinglyLinkedList.hs
hackerrank/: utils.bzl
hackerrank/12466/: query.sql
hackerrank/12467/: query.sql
hackerrank/127/: BUILD.bazel  Main.hs
hackerrank/13579/: BUILD.bazel  main.c
hackerrank/13581/: BUILD.bazel  Main.hs
hackerrank/1884/: BUILD.bazel  Main.hs
hackerrank/1957/: BUILD.bazel  Main.hs
hackerrank/20055/: BUILD.bazel  Main.hs
hackerrank/20832/: BUILD.bazel  main.c
hackerrank/21277/: BUILD.bazel  main.c
hackerrank/21634/: BUILD.bazel  main.c
hackerrank/22564/: BUILD.bazel  main.c
hackerrank/22578/: BUILD.bazel  Main.hs
hackerrank/22869/: BUILD.bazel  Main.hs
hackerrank/26081/: BUILD.bazel  main.c
hackerrank/26216/: BUILD.bazel  Main.hs
hackerrank/27191/: BUILD.bazel  Main.hs
hackerrank/32335/: BUILD.bazel  main.c
hackerrank/32958/: BUILD.bazel  Main.hs
hackerrank/3330/: BUILD.bazel  main.sh
hackerrank/342/: BUILD.bazel  main.c
hackerrank/35155/: BUILD.bazel  main.c
hackerrank/4395/: BUILD.bazel  Main.hs
hackerrank/6024/: BUILD.bazel  Main.hs
hackerrank/7876/: BUILD.bazel
hackerrank/8038/: BUILD.bazel  main.cpp
hackerrank/8782/: BUILD.bazel  Main.hs
hackerrank/915/: BUILD.bazel  Main.hs  XOR.hs
hackerrank/generic/: test.sh
language/haskell/: BUILD.bazel  TypeClasses.hs
