load("@rules_haskell//haskell:defs.bzl", "haskell_binary")

haskell_binary(
    name = "13581hs",
    srcs = ["Main.hs"],
    deps = [
        "//deps/ghc:array",
        "//deps/ghc:base",
        "//deps/ghc:containers",
        "@stackage//:split",
    ],
)

load("//:hackerrank/utils.bzl", "generic_hackerrank_test")

generic_hackerrank_test(
    name = "_13581",
    data = glob([
        "input/*.txt",
        "output/*.txt",
    ]),
    problem_id = "13581",
    target = "13581hs",
)
