load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "20832",
    srcs = ["main.c"],
)

load("//:hackerrank/utils.bzl", "generic_hackerrank_test")

generic_hackerrank_test(
    name = "_20832",
    data = glob([
        "input/*.txt",
        "output/*.txt",
    ]),
    problem_id = "20832",
    target = "20832",
)
