load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "21277",
    srcs = ["main.c"],
)

load("//:hackerrank/utils.bzl", "generic_hackerrank_test")

generic_hackerrank_test(
    name = "_21277",
    data = glob([
        "input/*.txt",
        "output/*.txt",
    ]),
    problem_id = "21277",
    target = "21277",
)
