load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "21634",
    srcs = ["main.c"],
)

load("//:hackerrank/utils.bzl", "generic_hackerrank_test")

generic_hackerrank_test(
    name = "_21634",
    data = glob([
        "input/*.txt",
        "output/*.txt",
    ]),
    problem_id = "21634",
    target = "21634",
)
