load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "22564",
    srcs = ["main.c"],
)

load("//:hackerrank/utils.bzl", "generic_hackerrank_test")

generic_hackerrank_test(
    name = "_22564",
    data = glob([
        "input/*.txt",
        "output/*.txt",
    ]),
    problem_id = "22564",
    target = "22564",
)
