load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "26081",
    srcs = ["main.c"],
)

load("//:hackerrank/utils.bzl", "generic_hackerrank_test")

generic_hackerrank_test(
    name = "_26081",
    data = glob([
        "input/*.txt",
        "output/*.txt",
    ]),
    problem_id = "26081",
    target = "26081",
)
