load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "32335",
    srcs = ["main.c"],
)

load("//:hackerrank/utils.bzl", "generic_hackerrank_test")

generic_hackerrank_test(
    name = "_32335",
    data = glob([
        "input/*.txt",
        "output/*.txt",
    ]),
    problem_id = "32335",
    target = "32335",
)
