load("@rules_haskell//haskell:defs.bzl", "haskell_binary")

haskell_binary(
    name = "32958hs",
    srcs = ["Main.hs"],
    deps = [
        "//deps/ghc:array",
        "//deps/ghc:base",
        "//deps/ghc:containers",
        "@stackage//:split",
    ],
)

load("//:hackerrank/utils.bzl", "generic_hackerrank_test")

generic_hackerrank_test(
    name = "_32958",
    data = glob([
        "input/*.txt",
        "output/*.txt",
    ]),
    problem_id = "32958",
    target = "32958hs",
)
