load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "342",
    srcs = ["main.c"],
)

load("//:hackerrank/utils.bzl", "generic_hackerrank_test")

generic_hackerrank_test(
    name = "_342",
    data = glob([
        "input/*.txt",
        "output/*.txt",
    ]),
    problem_id = "342",
    target = "342",
)
