load("@rules_haskell//haskell:defs.bzl", "haskell_binary")

haskell_binary(
    name = "915hs",
    srcs = ["Main.hs"],
    deps = [
        "//deps/ghc:array",
        "//deps/ghc:base",
        "//deps/ghc:containers",
        "@stackage//:split",
    ],
)

load("//:hackerrank/utils.bzl", "generic_hackerrank_test")

generic_hackerrank_test(
    name = "_915",
    data = glob([
        "input/*.txt",
        "output/*.txt",
    ]),
    problem_id = "915",
    target = "915hs",
)
